Chapter07: example update